--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"bits-ui": "^2.7.0",
 		"clsx": "^2.1.1",
+		"daisyui": "^5.0.43",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
